<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    android:orientation="vertical"
    tools:context="com.shenni.lives.activity.DynActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginBottom="@dimen/p20"
        android:background="@drawable/bg_half_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginRight="@dimen/p30"
            android:layout_weight="1">

            <TextView
                style="@style/font_dark14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="充值" />

            <ImageView
                android:id="@+id/iv_chongzhi_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/icon_chongzhi_guanbi" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/p1"
            android:background="@color/gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center">

            <LinearLayout
                android:id="@+id/rg_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <!--android:layout_width="@dimen/p160"-->
                <!--android:layout_height="@dimen/p100"-->
                <LinearLayout
                    android:id="@+id/ll_chat_cz1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/p10"
                    android:layout_marginRight="@dimen/p10"
                    android:background="@drawable/shap_ll_orange"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_chat_m1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/p10"
                        android:paddingRight="@dimen/p10"
                        android:paddingTop="@dimen/p10"
                        android:text="@string/gold_Pay1_m"
                        android:textColor="@color/pop_text_cz" />

                    <TextView
                        android:id="@+id/tv_chat_l1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p20"
                        android:background="@drawable/view_line_or"
                        android:layerType="software" />

                    <TextView
                        android:id="@+id/tv_chat_y1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/p10"
                        android:text="@string/gold_Pay1_y"
                        android:textColor="@color/pop_text_cz" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_chat_cz2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/p10"
                    android:layout_marginRight="@dimen/p10"
                    android:background="@drawable/shap_ll_orange"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_chat_m2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/p10"
                        android:paddingRight="@dimen/p10"
                        android:paddingTop="@dimen/p10"
                        android:text="@string/gold_Pay2_m"
                        android:textColor="@color/pop_text_cz" />

                    <TextView
                        android:id="@+id/tv_chat_l2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p20"
                        android:background="@drawable/view_line_or"
                        android:layerType="software" />

                    <TextView
                        android:id="@+id/tv_chat_y2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/p10"
                        android:text="@string/gold_Pay2_y"
                        android:textColor="@color/pop_text_cz" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_chat_cz3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/p10"
                    android:layout_marginRight="@dimen/p10"
                    android:background="@drawable/shap_ll_orange"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_chat_m3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/p10"
                        android:paddingRight="@dimen/p10"
                        android:paddingTop="@dimen/p10"
                        android:text="@string/gold_Pay3_m"
                        android:textColor="@color/pop_text_cz" />

                    <TextView
                        android:id="@+id/tv_chat_l3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p20"
                        android:background="@drawable/view_line_or"
                        android:layerType="software" />

                    <TextView
                        android:id="@+id/tv_chat_y3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/p10"
                        android:text="@string/gold_Pay3_y"
                        android:textColor="@color/pop_text_cz" />


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_chat_cz4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/p10"
                    android:layout_marginRight="@dimen/p10"
                    android:background="@drawable/shap_ll_orange"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_chat_m4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/p10"
                        android:paddingRight="@dimen/p10"
                        android:paddingTop="@dimen/p10"
                        android:text="@string/gold_Pay4_m"
                        android:textColor="@color/pop_text_cz" />

                    <TextView
                        android:id="@+id/tv_chat_l4"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/p20"
                        android:background="@drawable/view_line_or"
                        android:layerType="software" />

                    <TextView
                        android:id="@+id/tv_chat_y4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/p10"
                        android:text="@string/gold_Pay4_y"
                        android:textColor="@color/pop_text_cz" />


                </LinearLayout>


            </LinearLayout>


            <RadioGroup
                android:id="@+id/rg_pay_select"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <com.shenni.lives.widget.MyRadioButton
                    android:id="@+id/rg_pay_weixin"
                    android:layout_width="@dimen/p280"
                    android:layout_height="@dimen/p120"
                    android:layout_marginLeft="@dimen/p16"
                    android:layout_marginRight="@dimen/p8"
                    android:background="@drawable/icon_weixin_big"
                    android:button="@null"
                    android:clickable="true" />

                <com.shenni.lives.widget.MyRadioButton
                    android:id="@+id/rb_pay_zhifubao"
                    android:layout_width="@dimen/p280"
                    android:layout_height="@dimen/p120"
                    android:layout_marginLeft="@dimen/p8"
                    android:layout_marginRight="@dimen/p8"
                    android:background="@drawable/icon_zhifubao_big"
                    android:button="@null"
                    android:clickable="true" />
            </RadioGroup>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:gravity="center">

            <ImageView
                android:id="@+id/rv_pay_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/icon_chongzhi" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/p1"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical">

            <TextView
                style="@style/font_dark14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/p20"
                android:padding="@dimen/p10"
                android:text="余额:" />

            <TextView
                android:id="@+id/tv_chat_yue"
                style="@style/font_dark14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/live_gold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
