<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.shenni.lives.activity.MyAccActivity">


    <include
        android:id="@+id/tab_titles"
        layout="@layout/title_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@+id/tab_titles"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/p10"
            android:orientation="vertical">
            <!--//个人信息-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/p180"
                android:layout_marginBottom="@dimen/p10"
                android:layout_marginTop="@dimen/p10"
                android:background="@color/white"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/p20"
                android:paddingRight="@dimen/p20">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_mine_head"
                    android:layout_width="@dimen/p160"
                    android:layout_height="@dimen/p160"
                    android:layout_gravity="center_vertical" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/p28"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_mine_name"
                        style="@style/font_dark16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="再回首惘然若梦" />

                    <TextView
                        android:id="@+id/tv_mine_gold"
                        style="@style/font_grey12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_mine_name"
                        android:text="ID:" />

                    <TextView
                        android:id="@+id/tv_mine_golds"
                        style="@style/font_grey12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/tv_mine_gold"
                        android:layout_marginLeft="@dimen/p2"
                        android:layout_toRightOf="@+id/tv_mine_gold"
                        tools:text="123123132" />

                    <ImageView
                        android:id="@+id/iv_level"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/tv_mine_name"
                        android:layout_marginLeft="@dimen/p30"
                        android:layout_toRightOf="@+id/tv_mine_name" />

                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/p10"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/iv_acc1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/p10"
                                android:background="@drawable/icon_cabochon" />

                        </LinearLayout>
                        <!--//侯爵-->
                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/p38"
                            android:layout_weight="6"
                            android:paddingRight="@dimen/p30">


                            <TextView
                                android:id="@+id/tv_marquess"
                                style="@style/font_orange24"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentLeft="true"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:layout_marginLeft="8dp"
                                android:layout_marginStart="8dp"
                                android:text="@string/live_level1" />

                            <TextView
                                android:id="@+id/tv_acc_price"
                                style="@style/font_dark16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_above="@+id/textView2"
                                android:layout_alignBottom="@+id/tv_marquess"
                                android:layout_marginBottom="@dimen/p4"
                                android:layout_marginLeft="7dp"
                                android:layout_marginStart="8dp"
                                android:layout_toEndOf="@+id/tv_marquess"
                                android:layout_toRightOf="@+id/tv_marquess"
                                android:text="活动价:" />

                            <TextView
                                android:id="@+id/ev_mine_dfh"
                                style="@style/font_dark16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBottom="@+id/tv_acc_price"
                                android:layout_marginLeft="@dimen/p17"
                                android:layout_toRightOf="@+id/tv_acc_price"
                                android:text="@string/live_pay1_month" />

                            <TextView
                                android:id="@+id/textView2"
                                style="@style/font_dark16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignLeft="@+id/tv_marquess"
                                android:layout_below="@+id/tv_marquess"
                                android:layout_marginTop="@dimen/p20"
                                android:text="@string/live_pay1_tips" />

                            <ImageView

                                android:id="@+id/iv_macc_level1"
                                android:layout_width="@dimen/p100"
                                android:layout_height="@dimen/p60"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:background="@drawable/icon_dredge" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <!--//国王-->
                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/iv_acc2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/p10"
                                android:background="@drawable/icon_king" />

                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/p38"
                            android:layout_weight="6"
                            android:paddingRight="@dimen/p30">


                            <TextView
                                android:id="@+id/tv_king"
                                style="@style/font_orange24"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginStart="8dp"
                                android:text="@string/live_level2" />

                            <TextView
                                android:id="@+id/tv_king_price"
                                style="@style/font_dark16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBottom="@+id/tv_king"
                                android:layout_marginBottom="@dimen/p4"
                                android:layout_marginLeft="8dp"
                                android:layout_toRightOf="@+id/tv_king"
                                android:text="活动价:" />

                            <TextView
                                android:id="@+id/tv_mine_gw"
                                style="@style/font_dark16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignBottom="@+id/tv_king_price"
                                android:layout_marginLeft="@dimen/p17"
                                android:layout_toRightOf="@+id/tv_king_price"
                                android:text="@string/live_pay2_month" />

                            <TextView
                                style="@style/font_dark16"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignLeft="@+id/tv_king"
                                android:layout_below="@+id/tv_king"
                                android:layout_marginTop="@dimen/p20"
                                android:text="@string/live_pay2_tips" />


                            <ImageView
                                android:layout_width="@dimen/p100"
                                android:id="@+id/iv_macc_level2"
                                android:layout_height="@dimen/p60"
                                android:layout_alignParentRight="true"
                                android:layout_centerVertical="true"
                                android:background="@drawable/icon_dredge" />
                        </RelativeLayout>
                    </LinearLayout>

                </LinearLayout>


                <!--//充值分界线-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/p30"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="@dimen/p30"
                    android:paddingRight="@dimen/p30">

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/p2"
                        android:layout_weight="1"
                        android:background="@color/live_bg" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/p30"
                        android:layout_marginRight="@dimen/p30"
                        android:text="@string/live_gold_add"
                        android:textColor="@color/font_orange" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="@dimen/p2"
                        android:layout_weight="1"
                        android:background="@color/live_bg" />
                </LinearLayout>
                <!--//充值-->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/p30"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/p30"
                    android:paddingRight="@dimen/p30">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gold_Pay1" />

                    <ImageView
                        android:id="@+id/iv_macc_gold1"
                        android:layout_width="@dimen/p100"
                        android:layout_height="@dimen/p60"
                        android:background="@drawable/icon_recharge_default" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/p30"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/p30"
                    android:paddingRight="@dimen/p30">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gold_Pay2" />

                    <ImageView
                        android:id="@+id/iv_macc_gold2"
                        android:layout_width="@dimen/p100"
                        android:layout_height="@dimen/p60"
                        android:background="@drawable/icon_recharge_default" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/p30"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/p30"
                    android:paddingRight="@dimen/p30">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gold_Pay3" />

                    <ImageView
                        android:id="@+id/iv_macc_gold3"
                        android:layout_width="@dimen/p100"
                        android:layout_height="@dimen/p60"
                        android:background="@drawable/icon_recharge_default" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/p30"
                    android:layout_marginTop="@dimen/p30"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/p30"
                    android:paddingRight="@dimen/p30">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/gold_Pay4" />

                    <ImageView
                        android:id="@+id/iv_macc_gold4"
                        android:layout_width="@dimen/p100"
                        android:layout_height="@dimen/p60"
                        android:background="@drawable/icon_recharge_default" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/tv_mine_kefu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/p10"
        android:text="@string/live_lianxi_kefu" />
</RelativeLayout>
